--- a/src/index.css
+++ b/src/index.css
@@ -16,4 +16,7 @@ body{
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   margin: 0 auto;
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
 }
